# veyra

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TUTORIALS.md  VEYRA_ROADMAP.md  VEYRA_VISION.md  serve_website.py  setup.py
.github/workflows/: ci.yml
examples/: advanced_features.veyra  advanced_test.veyra  benchmark.veyra  classes_demo.veyra  complete_demo.veyra  control_flow.veyra  example.veyra  feature_test.veyra  flawless_ui_demo.veyra  functions_demo.veyra  hello.veyra  professional_test.veyra  stdlib_test.veyra  types_demo.veyra  web_server.veyra  webserver_demo.veyra
src/: error.rs  interpreter.rs  lib.rs  main.rs  runtime.rs
src/codegen/: mod.rs
src/lexer/: mod.rs  tokens.rs
src/parser/: ast.rs  mod.rs
src/stdlib/: ai.rs  app.rs  collections.rs  concurrency.rs  database.rs  io.rs  math.rs  mod.rs  string.rs  system.rs  web.rs
src/typechecker/: mod.rs  types.rs
src/veyra/: __init__.py  interpreter.py  lexer.py  parser.py  pm.py
tests/: __init__.py  test_interpreter.py  test_lexer.py  test_parser.py
